name:                               catnplus
version:                            0.1.0.0
synopsis:                           Simple tool to display text files with line numbers and paging
homepage:                           https://github.com/rcook/catnplus#readme
license:                            MIT
license-file:                       LICENSE
author:                             Richard Cook
maintainer:                         rcook@rcook.org
copyright:                          2017 Richard Cook
category:                           Command Line Tool
build-type:                         Simple
cabal-version:                      >=1.10
extra-source-files:                 README.md

executable catnplus
  hs-source-dirs:                   src
  ghc-options:                      -W -Wall -Werror -dynamic
  main-is:                          Main.hs
  default-language:                 Haskell2010
  other-modules:                    CatNPlus
                                  , CatNPlus.App
                                  , CatNPlus.KeyPress
  build-depends:                    ansi-terminal
                                  , base
                                  , directory
                                  , either
                                  , transformers
