name:                               catnplus
version:                            0.1.0.0
synopsis:                           Simple tool to display text files with line numbers and paging
homepage:                           https://github.com/rcook/catnplus#readme
license:                            MIT
license-file:                       LICENSE
author:                             Richard Cook
maintainer:                         rcook@rcook.org
copyright:                          2017 Richard Cook
category:                           Command Line Tool
build-type:                         Simple
cabal-version:                      >=1.10
extra-source-files:                 README.md

executable catnplus
  hs-source-dirs:                   src
  ghc-options:                      -W -Wall -Werror
  main-is:                          Main.hs
  default-language:                 Haskell2010
  other-modules:                    CatNPlus
                                  , CatNPlus.App
                                  , CatNPlus.GetHiddenChar
                                  , CatNPlus.KeyPress
                                  , VersionInfo
  if os(linux)
    cpp-options:                    -DOS_Linux
    other-modules:                  CatNPlus.GetHiddenChar.Posix
  if os(windows)
    cpp-options:                    -DOS_Windows
    other-modules:                  CatNPlus.GetHiddenChar.Windows
  if os(darwin)
    cpp-options:                    -DOS_macOS
    other-modules:                  CatNPlus.GetHiddenChar.Posix

  build-depends:                    ansi-terminal
                                  , base
                                  , directory
                                  , either
                                  , optparse-applicative
                                  , template-haskell
                                  , terminal-size
                                  , transformers
                                  , vcs-revision
